app/imports/ui/stylesheets/style.css
/*
body {
  padding-top: 61px; //Move body of page below navbar.
}
*/

/* ========================================== */
/* NOT LANDING PAGE Top navigation bar  */
/* ========================================== */
.ui.top.fixed.borderless.inverted.menu.navbar {
  background-color: #2c3e50;
}

.ui.top.fixed.borderless.inverted.menu.navbar .ui.container .item {
  background-color: #2c3e50;
  color: #fff;
}

.ui.top.fixed.borderless.inverted.menu.navbar .ui.container .item:hover {
  background-color: #2c3e50;
  color: #18bc9c;
}

.ui.inverted.menu .active.item {
  background-color: #2c3e50;
  color: #18bc9c !important;
}

.ui.inverted.menu .active.item:hover {
  color: #18bc9c !important;
}

.ui.inverted.menu .item, .ui.inverted.menu .item > a:not(.ui):hover {
  color: #18bc9c;
}
/* ========================================== */
/* LANDING PAGE Top navigation bar */
/* ========================================== */

landing-navbar {
  background-color: rgba(0,0,0,0.3);
  height:61px;
  position: fixed;
  top: 0;
  transition: top 0.2s ease-in-out;
  width: 100%;
  border:none;
}
.landing-navbar-up {
  top: -61px;
}
.ui.top.container.fixed.borderless.inverted.grid.landing {
  margin-top:12px;
}
.ui.top.container.fixed.borderless.inverted.grid.landing .landing-logo {
  margin-right:700px;
  padding-left:16px;
  color:#fff;
  padding-top:1px;
}

/* ========================================== */
/* LANDING PAGE content */
/* ========================================== */
.home-page-main-background {
  background: url('/images/home-page-background1.jpg') no-repeat center center fixed;
  background-size: cover;
  height: 750px;
}

.home-page-main-background .ui.main.header {
  font-size: 55px;
  margin-top: 275px;
  color: #fff;
}

.home-page-main-background .ui.secondary.header {
  font-size: 25px;
  color: #fff;
}

.home-page-div1-background {
  background-color: #282C35;
  height: 250px;
  color: #18bc9c;
}

.home-page-div1-background .ui.main.header {
  margin-top: 50px;
  font-size:35px;
  color: #18bc9c;
}
.home-page-div1-background .ui.secondary.header {
  font-size: 20px;
  color: #18bc9c;
}

.home-page-div2-background {
  background-color: #F3F3F3;
  height:225px;
}

.home-page-div2-background .ui.header {
  font-size:25px;
  color:#33373D;
  margin-top:80px;
}
.home-page-div2-background .ui.header .sub.header {
  font-size:18px;
}

.home-page-div3-background {
  background-color: #F3F3F3;
  height:425px;
}

.home-page-div3-background .ui.header {
  font-size:25px;
  color:#33373D;
  margin-top:20px;
}
.home-page-div3-background .ui.header .sub.header {
  font-size:18px;
}
/* WHITE BACKGROUND #F3F3F3
   OVERLAY BACKGROUDN WHITE #ffffff
 */
.home-page-div4-background {
  background-color: #F3F3F3;
  height:155px;
  color:#33373D;
}

.home-page-div4-background .ui.header {
  font-size:25px;
  color:#33373D;
  margin-top:0px;
}
.home-page-div4-background .ui.header .sub.header {
  font-size:18px;
}


/* ========================================== */
/* Footer */
/* ========================================== */
.page-footer {
  color: #fff;
  background-color: #282C35;
  padding-bottom: 15px;
}

/* ========================================== */
/* User Login Page */
/* ========================================== */

.user-login-page {
  background: url('http://wallup.net/wp-content/uploads/2016/04/06/336383-night-camping-stars-landscape-Milky_Way.jpg') no-repeat center center fixed;
  background-size: cover;
  height: 750px;
}

.ui.container.user.login.page {
  margin-top: 280px;
}

.ui.inverted.fluid.left.icon.input {
  margin: 0em 30em;
}

/* Input color of Username/Password fields */
.ui.fluid.input > input {
  background-color: #67575a;
}

/* Login Button */
.ui.container.user.login.page .ui.login.page.button {
  background-color: #e63b68;
  width: 23.5%;
  margin-left: 420px;
  border-radius: 0.3em;
}

/* Create Account Button */
.ui.container.user.login.page .ui.create.account.page.button {
  background-color: #C1ACD5;
  width: 23.5%;
  margin-left: 420px;
  border-radius: 0.3em;
  margin-top: 20px;
}

/* Placeholder color */
.ui.inverted.fluid.left.icon.input ::-webkit-input-placeholder { /* Chrome */
  color: #fff;
}

.ui.inverted.fluid.left.icon.input :-ms-input-placeholder { /* IE 10+ */
  color: #fff;
}

.ui.inverted.fluid.left.icon.input ::-moz-placeholder { /* Firefox 19+ */
  color: #fff;
  opacity: 1;
}

.ui.inverted.fluid.left.icon.input :-moz-placeholder { /* Firefox 4 - 18 */
  color: #fff;
  opacity: 1;
}

/* ========================================== */
/* Admin Login Page */
/* ========================================== */
.admin-login-page {
  background: url('/images/home-page-background.jpg') no-repeat center center fixed;
  background-size: cover;
  height: 750px;
}

/* Admin Button */
.admin-login-page .ui.grid.container.background .ui.container.user.login.page .ui.admin.login.page.button {
  background-color: #00bcd4;
  width: 23.5%;
  margin-left: 420px;
  border-radius: 0.3em;
}

/* ========================================== */
/* Adventure Page */
/* ========================================== */
.ui.container.adventure.display {
  padding-top: 40px;
}

.adventure.bottom.whitespace {
  padding-top: 40px;
}

.adventure.bottom.color {
  padding-top: 40px;
  background-color: #609142;
  height: 60px;
}

.ui.adventure.icon.input .prompt {
  border: 10px solid transparent;
}

.ui.adventure.navbar.container .ui.four.item.menu.adventure.page .item {
  background-color: #ababab;
  color: #fff;
  border: none;
  box-shadow: none;
}

/* ========================================== */
/* Add Activity Page */
/* ========================================== */
.ui.center.block.header {
  background-color: #e6e6e6;
  box-shadow: none;
}

.add.activity.bottom.whitespace {
  padding-top: 40px;
}

/* ========================================== */
/* Not Found Page */
/* ========================================== */

.not-found-page-background {
  background: url('/images/404.jpg') no-repeat center center fixed;
  background-size: cover;
  height: 1000px;
}

.not-found-page-background .ui.main.header {
  margin-top: 150px;
  font-size:35px;
  color: #18bc9c;
  padding-bottom:20px;
}

.ui.middle.aligned.centered.grid.text.container.teleport button {
  background-color: #00b5ad;
  color:#fff;
}

/* ========================================== */
/* Not Login Page */
/* ========================================== */

.not-loggedin-background {
  background: url('/images/unauthorized.jpg') no-repeat center center fixed;
  background-size: cover;
  height: 750px;
  /*
  ALTERNATE SIMPLE VERSION

  background-color: #282C35;
  height: 750px;
  color: #18bc9c;
   */
}
.not-loggedin-background .ui.main.header {
  margin-top: 300px;
  font-size:35px;
  color: #fff;
}
.not-loggedin-background .ui.secondary.header {
  font-size: 20px;
  color: #18bc9c;
}

